[workspace]
resolver = "2"

members = [
  "crates/auto-hash-map",
  "crates/next-binding",
  "crates/next-core",
  "crates/next-dev",
  "crates/node-file-trace",
  "crates/swc-ast-explorer",
  "crates/turbo-malloc",
  "crates/turbo-tasks-build",
  "crates/turbo-tasks-env",
  "crates/turbo-tasks-fs",
  "crates/turbo-tasks-hash",
  "crates/turbo-tasks-macros",
  "crates/turbo-tasks-macros-shared",
  "crates/turbo-tasks-memory",
  "crates/turbo-tasks-testing",
  "crates/turbo-tasks",
  "crates/turbopack-cli-utils",
  "crates/turbopack-core",
  "crates/turbopack-create-test-app",
  "crates/turbopack-css",
  "crates/turbopack-dev-server",
  "crates/turbopack-ecmascript",
  "crates/turbopack-env",
  "crates/turbopack-node",
  "crates/turbopack-json",
  "crates/turbopack-static",
  "crates/turbopack-swc-utils",
  "crates/turbopack",
  "crates/turbopack-tests",
  "shim",
  "xtask",
]

default-members = [
  "crates/auto-hash-map",
  "crates/next-binding",
  "crates/next-core",
  "crates/next-dev",
  "crates/node-file-trace",
  "crates/swc-ast-explorer",
  "crates/turbo-malloc",
  "crates/turbo-tasks-build",
  "crates/turbo-tasks-env",
  "crates/turbo-tasks-fs",
  "crates/turbo-tasks-hash",
  "crates/turbo-tasks-macros",
  "crates/turbo-tasks-macros-shared",
  "crates/turbo-tasks-memory",
  "crates/turbo-tasks-testing",
  "crates/turbo-tasks",
  "crates/turbopack-cli-utils",
  "crates/turbopack-core",
  "crates/turbopack-create-test-app",
  "crates/turbopack-css",
  "crates/turbopack-dev-server",
  "crates/turbopack-ecmascript",
  "crates/turbopack-env",
  "crates/turbopack-json",
  "crates/turbopack-static",
  "crates/turbopack-swc-utils",
  "crates/turbopack",
  "crates/turbopack-tests",
  "xtask",
]

[profile.release]

[profile.bench]

[profile.dev.package.turbo-tasks-macros]
opt-level = 3

# Set the settings for build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.dependencies]
indexmap = { version = "1.9.2" }
# Keep consistent with preset_env_base through swc_core
browserslist-rs = { version = "0.12.2" }
swc_core = { git = "https://github.com/swc-project/swc.git", rev = "171733e8bb26e0ea7b88cba4279fecd243d0a440" }
testing = { git = "https://github.com/swc-project/swc.git", rev = "171733e8bb26e0ea7b88cba4279fecd243d0a440" }
swc_emotion = { git = "https://github.com/kwonoj/plugins.git", rev = "536b025152ef3622d0e09c730ad95c20dab9265d" }
styled_jsx = { git = "https://github.com/kwonoj/plugins.git", rev = "536b025152ef3622d0e09c730ad95c20dab9265d" }
styled_components = { git = "https://github.com/kwonoj/plugins.git", rev = "536b025152ef3622d0e09c730ad95c20dab9265d" }
modularize_imports = { git = "https://github.com/kwonoj/plugins.git", rev = "536b025152ef3622d0e09c730ad95c20dab9265d" }
mdxjs = { git = "https://github.com/kwonoj/mdxjs-rs.git", rev = "5a7b1453c98f04c7d025c14e120c226b1eb32ca8" }
next-dev = { path = "crates/next-dev", version = "0.1.0" }
node-file-trace = { path = "crates/node-file-trace", version = "0.1.0" }
